# VarjoToolkit

./: .gitignore  CHANGELOG.md  CMakeLists.txt  NAMING_MIGRATION.md  README.md
cmake/: VarjoToolkitConfig.cmake.in
docs/: ARCHITECTURE.md  EXTERNAL_FRAME_SYNCHRONIZATION.md  HMD_SERVICE_METRICS.md  HMD_SERVICE_PERFORMANCE_TESTS.md  PERFORMANCE_METRICS.md  SUPERDEBUG.md  TESTING.md
docs/releases/: v0.2.0.md
include/VarjoServices/EyeTracking/: VarjoEyeTrackingService.hpp
include/VarjoServices/EyeTrackingService/: VSTService.hpp  VarjoEyeTrackerService.hpp
include/VarjoServices/IMU/: VarjoIMUService.hpp
include/VarjoServices/IMUService/: VarjoIMUService.hpp
include/VarjoServices/TimeMapping/: VarjoTimeMappingService.hpp
include/VarjoServices/TimeMappingService/: VarjoTimestampMapper.hpp
include/VarjoServices/Utilities/: VarjoTimestampMapping.hpp
include/VarjoServices/VST/: VarjoVSTService.hpp
include/VarjoToolkit/: Version.hpp
include/VarjoToolkit/Core/: VarjoEventQueue.hpp  VarjoFrameInfo.hpp  VarjoScopedLock.hpp  VarjoSession.hpp
include/VarjoToolkit/DataStream/: VarjoDataStream.hpp  VarjoDataStreamBufferLock.hpp  VarjoDataStreamFrameQueue.hpp
include/VarjoToolkit/Diagnostics/: VarjoDiagnostics.hpp
include/VarjoToolkit/MR/: VarjoCameraProperties.hpp  VarjoChromaKey.hpp  VarjoVideoPostProcessShader.hpp
include/VarjoToolkit/Rendering/: VarjoLayerFrame.hpp  VarjoOcclusionMesh.hpp  VarjoSwapChain.hpp
include/VarjoToolkit/Services/Cubemap/: VarjoEnvironmentCubemapService.hpp
include/VarjoToolkit/Services/Event/: VarjoEventService.hpp
include/VarjoToolkit/Services/EyeCamera/: VarjoEyeCameraService.hpp
include/VarjoToolkit/Services/EyeTracking/: VarjoEyeTrackingService.hpp
include/VarjoToolkit/Services/IMU/: VarjoIMUService.hpp
include/VarjoToolkit/Services/MarkerTracking/: VarjoMarkerTrackingService.hpp
include/VarjoToolkit/Services/VST/: VarjoVSTService.hpp
include/VarjoToolkit/Utilities/: VarjoCsv.hpp  VarjoRunCountingDeque.hpp  VarjoRunResetSignal.hpp  VarjoSampleRateCounter.hpp
include/VarjoToolkit/World/: VarjoMarkerTracker.hpp  VarjoWorld.hpp
samples/: CMakeLists.txt
samples/D3D11RenderSample/: CMakeLists.txt  README.md  main.cpp
samples/D3D12RenderSample/: CMakeLists.txt  README.md  main.cpp
samples/OcclusionMeshDumpSample/: CMakeLists.txt  README.md  main.cpp
samples/ServiceLoggerSample/: CMakeLists.txt  README.md  WrapperExamples.cpp  WrapperExamples.hpp  main.cpp
samples/VideoPostProcessD3D11Sample/: CMakeLists.txt  README.md  main.cpp
samples/VideoPostProcessD3D12Sample/: CMakeLists.txt  README.md  main.cpp
scripts/: run_coverage_open_cpp_coverage.bat
src/: VSTService.cpp  VarjoCameraProperties.cpp  VarjoChromaKey.cpp  VarjoCsv.cpp  VarjoDataStream.cpp  VarjoDataStreamBufferLock.cpp  VarjoEnvironmentCubemapService.cpp  VarjoEventQueue.cpp  VarjoEventService.cpp  VarjoEyeCameraService.cpp  VarjoEyeTrackerService.cpp  VarjoEyeTrackingService.cpp  VarjoFrameInfo.cpp  VarjoIMUService.cpp  VarjoLayerFrame.cpp  VarjoMarkerTracker.cpp  VarjoMarkerTrackingService.cpp  VarjoOcclusionMesh.cpp  VarjoScopedLock.cpp  VarjoSession.cpp  VarjoSwapChain.cpp  VarjoTimeMappingService.cpp  VarjoTimestampMapper.cpp  VarjoTimestampMapping.cpp  VarjoVSTService.cpp  VarjoVideoPostProcessShader.cpp  VarjoWorld.cpp
tests/: CMakeLists.txt  CameraChromaDetailedTest.cpp  CameraPropertiesTest.cpp  CoreWrappersSmokeTest.cpp  CsvUtilityTest.cpp  DataStreamWrappersTest.cpp  EventMarkerServicesTest.cpp  QueueTimestampUtilityTest.cpp  RenderingWorldDetailedTest.cpp  RenderingWorldWrappersTest.cpp  ScopedLockChromaKeyTest.cpp  VideoPostProcessShaderTest.cpp  hmd_core_smoke.cpp  hmd_cubemap_service_performance.cpp  hmd_cubemap_service_smoke.cpp  hmd_d3d11_swapchain_smoke.cpp  hmd_d3d12_swapchain_smoke.cpp  hmd_external_frame_sync.hpp  hmd_eye_camera_service_performance.cpp  hmd_eye_camera_service_smoke.cpp  hmd_eye_tracking_service_performance.cpp  hmd_eye_tracking_service_smoke.cpp  hmd_imu_service_performance.cpp  hmd_imu_service_smoke.cpp  hmd_rendering_smoke.cpp  hmd_service_performance_common.hpp  hmd_service_test_common.hpp  hmd_test_common.hpp  hmd_vst_service_performance.cpp  hmd_vst_service_smoke.cpp  sample_rate_utilities_test.cpp
tests/HmdSmokeTests/: CMakeLists.txt  HmdCameraPropertiesSmokeTest.cpp  HmdD3D11SwapChainSmokeTest.cpp  HmdD3D12SwapChainSmokeTest.cpp  HmdD3DTestCommon.hpp  HmdDataStreamConfigSmokeTest.cpp  HmdEventQueueSmokeTest.cpp  HmdOcclusionMeshSmokeTest.cpp  HmdTestCommon.hpp  HmdVideoPostProcessCommon.hpp  HmdVideoPostProcessD3D11SmokeTest.cpp  HmdVideoPostProcessD3D12SmokeTest.cpp  HmdWorldMarkerSmokeTest.cpp
tests/PackageConsumer/: CMakeLists.txt  RunPackageConsumerTest.cmake  main.cpp
